--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 node_modules
-frontend/node_modules
+sys-frontend/node_modules
 backend/node_modules
-frontend/dist/
+sys-frontend/dist/
 backend/dist/
-frontend/.env
+sys-frontend/.env
 backend/.env
 *.log
 
